# openmp-variant-provider

./: README.md  pyproject.toml
openmp_variant_provider/: __init__.py
