[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openmp-variant-provider"
authors = [{name = "Michał Górny", email = "mgorny@quansight.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = []

[project.urls]
Home = "https://github.com/wheelnext/openmp-variant-provider/"

[project.entry-points.variant_plugins]
openmp_variant_provider = "openmp_variant_provider"
